--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,6 +14,12 @@
 <body>
   <%- include('partials/_header') %>
 
+  
+
+
+
+
+
     <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -21,16 +27,28 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
+       
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-          </tr>
+            
+            <td>
+              <form method="POST" action= "/urls/<%= url %>/delete">
+                               
+                  <button type = "delete" class="btn btn-primary">Delete</button>
+                  
+                  </form>
+                </td>
+              </tr>
         <% } %>
       </tbody>
+
+      
     </table>
   </main>
   <!-- Bootstrap JS -->
