--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,16 +10,9 @@
 
 </head>
 
-
 <body>
   <%- include('partials/_header') %>
-
-  
-
-
-
-
-
+ 
     <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -27,7 +20,9 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
+         
         </tr>
       </thead>
       <tbody>
@@ -36,19 +31,25 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            
+                     
+           
+            <td>
+             <form method="GET" action="/urls/<%= url %>">
+                <button type="submit" class="btn btn-primary" name="shortURL" value="<%= url %>">Edit</button>
+               </form>
+            </td>
+
             <td>
               <form method="POST" action= "/urls/<%= url %>/delete">
-                               
-                  <button type = "delete" class="btn btn-primary">Delete</button>
-                  
-                  </form>
-                </td>
+                 <button type = "submit" class="btn btn-danger" name="shortURL" value="<%= url %>">Delete</button>
+               </form>
+            </td>
+
               </tr>
         <% } %>
       </tbody>
 
-      
+
     </table>
   </main>
   <!-- Bootstrap JS -->
