--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,13 +9,22 @@
 
 <body>
   <%- include('partials/_header') %>
+   
+  <div class='card text-center'>
+    <div class='card-header'></div>
+    <div class="card-body">
+      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
 
-  <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+    </div>
+    <h3>Edit</h3>
+    <form class='form-inline' method="POST" action="/urls/<%= shortURL %>">
+      <div class="form-group mb-2" style="margin: auto;">
+        <label for='longURL'>New URL:</label>
+        <input class='form-control' type='text' name='longURL' placeholder='http://www.tsn.ca'>
+        <button type='submit' class='btn btn-primary'>Submit</button>
       </div>
+    </form>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
