--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,4 +11,21 @@
       </div>
     </div>
   </nav>
+
+
+<h1>TinyApp</h1>
+<% if(username) { %>
+<form method="POST" action="/logout">
+  <h5>Logged in as: </a><%=username %></h5>
+  <button type='submit' class='btn-primary'>Logout</button>
+</form>}
+
+<%} else { %>
+  <form method="POST" action="/login">
+  <h5>Username: </h5>
+  <input class="form-control" type="text" name="username">
+  <button type='submit' class='btn-primary'>Login</button>
+  </form>
+<% } %>
+
 </header>
