--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,6 +11,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div>
+
         <% if(email) { %>
         <form method="POST" action="/logout" class="form-inline">
           <span class="navbar-text mr-3">
@@ -21,7 +22,7 @@
 
         <%} else { %>
         <a href='/login">
-            <button type=' submit' class='btn-primary'>Login</button>
+            <button type=' submit class='btn-primary'>Login</button>
         </a>
         <a href='/register'>
           <button type='submit' class='btn-primary'>Register</button>
