--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,7 +30,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
                      
            
             <td>
